--- a/index.html
+++ b/index.html
@@ -2,20 +2,49 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Party Pop Decorations</title>
   <style>
-    body { font-family: Arial, sans-serif; margin: 0; padding: 0; background: #fef3f3; }
-    header { background: #ff66a3; color: white; padding: 20px; text-align: center; }
-    nav { text-align: center; padding: 10px; }
-    nav a { margin: 0 15px; color: #ff66a3; text-decoration: none; font-weight: bold; }
-    .hero { padding: 50px; background: url('https://source.unsplash.com/1600x500/?birthday,party') no-repeat center/cover; color: white; text-align: center; }
-    .section { padding: 40px 20px; text-align: center; }
-    .section h2 { color: #ff66a3; }
-    footer { background: #ff66a3; color: white; text-align: center; padding: 10px; }
+    body {
+      font-family: sans-serif;
+      margin: 0;
+      padding: 0;
+      background: #fff0f5;
+      color: #333;
+    }
+    header, footer {
+      background: #ff69b4;
+      color: white;
+      text-align: center;
+      padding: 20px;
+    }
+    nav {
+      background: #fff;
+      text-align: center;
+      padding: 10px;
+    }
+    nav a {
+      margin: 10px;
+      text-decoration: none;
+      color: #ff69b4;
+      font-weight: bold;
+    }
+    .hero {
+      background: lightpink;
+      text-align: center;
+      padding: 40px 20px;
+    }
+    .section {
+      padding: 30px 20px;
+      text-align: center;
+    }
+    h2 {
+      color: #ff69b4;
+    }
   </style>
 </head>
 <body>
+
   <header>
     <h1>Party Pop Decorations</h1>
     <p>Making Your Birthday Extra Special!</p>
@@ -28,27 +57,18 @@
   </nav>
 
   <div class="hero">
-    <h2>Balloon Arches • Cake Tables • Custom Themes</h2>
+    <h2>🎈 Balloons, 🎂 Cakes & 🎨 Themes</h2>
     <p>We decorate. You celebrate!</p>
   </div>
 
   <div class="section" id="services">
-    <h2>🎉 Our Services</h2>
-    <p>🎈 Balloon Arches<br>🎂 Cake Table Decor<br>🎨 Custom Themes<br>📷 Photo Booth Backdrops</p>
+    <h2>Our Services</h2>
+    <p>
+      🎈 Balloon Arches <br>
+      🎂 Cake Table Setup <br>
+      🎨 Custom Themes <br>
+      📷 Photo Booth Backdrops
+    </p>
   </div>
 
-  <div class="section" id="gallery">
-    <h2>📸 Gallery</h2>
-    <p>Coming soon with our latest birthday setups!</p>
-  </div>
-
-  <div class="section" id="contact">
-    <h2>📞 Contact Us</h2>
-    <p>Email: partypop@example.com<br>Phone: (123) 456-7890</p>
-  </div>
-
-  <footer>
-    &copy; 2025 Party Pop Decorations
-  </footer>
-</body>
-</html>
+  <div class=
