--- a/index.html
+++ b/index.html
@@ -3,72 +3,92 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Party Pop Decorations</title>
+  <title>My Free Store</title>
   <style>
     body {
       font-family: sans-serif;
       margin: 0;
       padding: 0;
-      background: #fff0f5;
-      color: #333;
+      background: #f9f9f9;
     }
-    header, footer {
-      background: #ff69b4;
+    header {
+      background: #4CAF50;
       color: white;
+      padding: 20px;
       text-align: center;
+    }
+    .products {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+      gap: 20px;
       padding: 20px;
     }
-    nav {
-      background: #fff;
+    .product {
+      background: white;
+      border: 1px solid #ddd;
+      border-radius: 8px;
+      padding: 10px;
+      text-align: center;
+    }
+    .product img {
+      max-width: 100%;
+      height: 150px;
+      object-fit: cover;
+    }
+    button {
+      margin-top: 10px;
+      background: #4CAF50;
+      color: white;
+      padding: 8px 12px;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+    }
+    footer {
       text-align: center;
       padding: 10px;
-    }
-    nav a {
-      margin: 10px;
-      text-decoration: none;
-      color: #ff69b4;
-      font-weight: bold;
-    }
-    .hero {
-      background: lightpink;
-      text-align: center;
-      padding: 40px 20px;
-    }
-    .section {
-      padding: 30px 20px;
-      text-align: center;
-    }
-    h2 {
-      color: #ff69b4;
+      background: #4CAF50;
+      color: white;
     }
   </style>
 </head>
 <body>
 
-  <header>
-    <h1>Party Pop Decorations</h1>
-    <p>Making Your Birthday Extra Special!</p>
-  </header>
+<header>
+  <h1>My Free eCommerce Store</h1>
+  <p>Simple • Stylish • Free</p>
+</header>
 
-  <nav>
-    <a href="#services">Services</a>
-    <a href="#gallery">Gallery</a>
-    <a href="#contact">Contact</a>
-  </nav>
-
-  <div class="hero">
-    <h2>🎈 Balloons, 🎂 Cakes & 🎨 Themes</h2>
-    <p>We decorate. You celebrate!</p>
+<main class="products">
+  <div class="product">
+    <img src="https://source.unsplash.com/200x150/?shoes" alt="Shoes">
+    <h3>Stylish Shoes</h3>
+    <p>$29.99</p>
+    <button onclick="addToCart('Stylish Shoes')">Add to Cart</button>
   </div>
-
-  <div class="section" id="services">
-    <h2>Our Services</h2>
-    <p>
-      🎈 Balloon Arches <br>
-      🎂 Cake Table Setup <br>
-      🎨 Custom Themes <br>
-      📷 Photo Booth Backdrops
-    </p>
+  <div class="product">
+    <img src="https://source.unsplash.com/200x150/?watch" alt="Watch">
+    <h3>Classic Watch</h3>
+    <p>$49.99</p>
+    <button onclick="addToCart('Classic Watch')">Add to Cart</button>
   </div>
+  <div class="product">
+    <img src="https://source.unsplash.com/200x150/?headphones" alt="Headphones">
+    <h3>Cool Headphones</h3>
+    <p>$39.99</p>
+    <button onclick="addToCart('Cool Headphones')">Add to Cart</button>
+  </div>
+</main>
 
-  <div class=
+<footer>
+  <p>&copy; 2025 My Free Store</p>
+</footer>
+
+<script>
+  function addToCart(productName) {
+    alert(productName + " added to cart!");
+  }
+</script>
+
+</body>
+</html>
