--- a/index.html
+++ b/index.html
@@ -3,141 +3,62 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Mini Online Store</title>
+  <title>Image to PDF Converter</title>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
   <style>
     body {
       font-family: Arial, sans-serif;
-      margin: 0;
-      background: #f4f4f4;
-    }
-    header {
-      background: #2c3e50;
-      color: white;
+      background: #f0f0f0;
       padding: 20px;
       text-align: center;
     }
-    .filter {
-      text-align: center;
+    input, button {
+      margin: 10px;
       padding: 10px;
     }
-    select {
-      padding: 5px;
-      font-size: 16px;
-    }
-    .store {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 20px;
-      padding: 20px;
-    }
-    .product {
-      background: white;
-      border: 1px solid #ddd;
-      border-radius: 8px;
-      padding: 15px;
-      text-align: center;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.05);
-    }
-    .product img {
-      max-width: 100%;
-      height: 180px;
-      object-fit: cover;
-      border-radius: 5px;
-    }
-    .product h3 {
-      margin: 10px 0 5px;
-    }
-    .product p {
-      margin: 5px 0;
-      color: #2c3e50;
-      font-weight: bold;
-    }
-    .product button {
-      background: #27ae60;
-      color: white;
-      border: none;
-      padding: 10px 15px;
-      border-radius: 5px;
-      cursor: pointer;
-      margin-top: 10px;
-    }
-    footer {
-      text-align: center;
-      background: #2c3e50;
-      color: white;
-      padding: 15px;
-      margin-top: 30px;
+    #preview img {
+      max-width: 150px;
+      margin: 10px;
+      border: 1px solid #ccc;
     }
   </style>
 </head>
 <body>
 
-<header>
-  <h1>Mini Online Store</h1>
-  <p>Browse. Click. Buy.</p>
-</header>
+  <h1>🖼️ Image to PDF Converter</h1>
+  <input type="file" id="imageFiles" multiple accept="image/*" />
+  <br>
+  <button onclick="convertToPDF()">Convert to PDF</button>
 
-<div class="filter">
-  <label for="category">Filter by category:</label>
-  <select id="category" onchange="filterProducts()">
-    <option value="all">All</option>
-    <option value="fashion">Fashion</option>
-    <option value="tech">Tech</option>
-    <option value="accessories">Accessories</option>
-  </select>
-</div>
+  <div id="preview"></div>
 
-<main class="store" id="product-list">
-  <!-- Products will be injected by JavaScript -->
-</main>
+  <script>
+    const preview = document.getElementById("preview");
+    const fileInput = document.getElementById("imageFiles");
 
-<footer>
-  &copy; 2025 Mini Store - Powered by You
-</footer>
-
-<script>
-  const products = [
-    { name: "Cool Sneakers", price: 49.99, image: "https://source.unsplash.com/300x200/?sneakers", category: "fashion" },
-    { name: "Smart Watch", price: 89.99, image: "https://source.unsplash.com/300x200/?watch", category: "tech" },
-    { name: "Wireless Earbuds", price: 29.99, image: "https://source.unsplash.com/300x200/?earbuds", category: "tech" },
-    { name: "Leather Wallet", price: 19.99, image: "https://source.unsplash.com/300x200/?wallet", category: "accessories" },
-    { name: "Handbag", price: 39.99, image: "https://source.unsplash.com/300x200/?handbag", category: "fashion" }
-  ];
-
-  function displayProducts(list) {
-    const container = document.getElementById("product-list");
-    container.innerHTML = "";
-    list.forEach(product => {
-      container.innerHTML += `
-        <div class="product">
-          <img src="${product.image}" alt="${product.name}">
-          <h3>${product.name}</h3>
-          <p>$${product.price.toFixed(2)}</p>
-          <button onclick="buyNow('${product.name}')">Buy Now</button>
-        </div>
-      `;
+    fileInput.addEventListener("change", () => {
+      preview.innerHTML = "";
+      Array.from(fileInput.files).forEach(file => {
+        const img = document.createElement("img");
+        img.src = URL.createObjectURL(file);
+        preview.appendChild(img);
+      });
     });
-  }
 
-  function filterProducts() {
-    const selected = document.getElementById("category").value;
-    if (selected === "all") {
-      displayProducts(products);
-    } else {
-      const filtered = products.filter(p => p.category === selected);
-      displayProducts(filtered);
-    }
-  }
+    async function convertToPDF() {
+      const { jsPDF } = window.jspdf;
+      const pdf = new jsPDF();
+      const files = fileInput.files;
 
-  function buyNow(productName) {
-    // You can customize this with your WhatsApp number
-    const message = encodeURIComponent(`Hi! I'm interested in buying: ${productName}`);
-    window.open(`https://wa.me/1234567890?text=${message}`, "_blank");
-  }
+      if (files.length === 0) {
+        alert("Please select at least one image.");
+        return;
+      }
 
-  // Initial load
-  displayProducts(products);
-</script>
+      for (let i = 0; i < files.length; i++) {
+        const imgData = await toDataURL(files[i]);
+        const img = new Image();
+        img.src = imgData;
+        await img.decode();
 
-</body>
-</html>
+        const pageWidth = pdf.inter
